# BKChem_python_3

./: .gitignore  LICENSE  README.md  descriptor_descriptions.csv  pyproject.toml  requirements.txt  start_bkchem.py
.github/: FUNDING.yml
bkchem/: CDML_versions.py  PmwColor.py.bak  __init__.py  arrow.py  atom.py  bkchem.py  bkchem_exceptions.py  bond.py  checks.py  classes.py  config.py  context_menu.py  data.py  debug.py  descriptor_dialog.py  descriptors.py  dialogs.py  dom_extensions.py  edit_pool.py  export.py  external_data.py  fingerprint_dialog.py  fingerprints.py  fragment.py  ftext.py  graphics.py  group.py  helper_graphics.py  http_server.py  http_server2.py  id_manager.py  import_checker.py  interactors.py  logger.py  main.py  marks.py  messages.py  misc.py  modes.py  molecule.py  (+22 more)
bkchem/oasa/: __init__.py  convert.py  test.py
bkchem/plugins/: CDXML.py  CML.py  CML2.py  __init__.py  bitmap.py  cairo_lowlevel.py  gtml.py  image_export.py  molfile.py  odf.py  openoffice.py  pdf_cairo.py  pdf_piddle.py  piddle_lowlevel.py  png_cairo.py  povray.py  ps_builtin.py  ps_cairo.py  ps_piddle.py  svg_cairo.py  tk2cairo.py  tk2piddle.py
doc/html/: a135.html  c112.html  c122.html  c132.html  c22.html  (+20 more)
locale/: BKChem.pot
plugins/: angle_between_bonds.py  angle_between_bonds.xml  animate_undo.py  animate_undo.xml  fetch_from_webbook.py  fetch_from_webbook.xml  fetch_name_from_webbook.py  fetch_name_from_webbook.xml  fragment_search.py  fragment_search.xml  mass_scissors.py  mass_scissors.xml  red_aromates.py  red_aromates.xml  text_to_group.py  text_to_group.xml
(+60 files in other folders)
